[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "presto"
description = "Fast parameterisation of bespoke MM force fields using MLPs."
authors = [
  {name = "Finlay Clark"},
  {name = "Thomas Pope"}
]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
presto = "presto._cli:run_cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["presto"]
include = ["presto/models/*.pt"]

[tool.ruff.lint]
ignore = ["C901", "E501"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true
exclude = ["presto/models/compile_aimnet2_ens_models.py"]

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py", "presto/models/compile_aimnet2_ens_models.py"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"
exclude = [
  "presto/_version.py",
  "presto/tests/",
  "presto/metadynamics.py", # As mostly lifted from OpenMM
  "presto/models/compile_aimnet2_ens_models.py"
]

[tool.coverage.report]
exclude_lines = [
  "@overload",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
]

# -----------------------------
# Pixi configuration
# -----------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
name = "presto"
preview = ["pixi-build"]

[tool.pixi.package]
name = {workspace = true}

[tool.pixi.package.build-dependencies]
python = ">=3.11"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = ["https://prefix.dev/conda-forge"]

[tool.pixi.environments]
default = { features = ["common", "smee_descent", "gpu", "dev", "docs", "typing", "aceff"] }
cpu = { features = ["common", "smee_descent", "cpu", "dev", "docs", "typing", "aceff"] }
runtime = { features = ["common", "smee_descent", "gpu", "aceff"] }
mace-runtime = { features = ["common", "smee_descent", "gpu", "mace"] }

[tool.pixi.dependencies]
python = ">=3.11"

# -----------------------------
# Shared dependencies
# -----------------------------
[tool.pixi.feature.common.dependencies]
pyyaml = "*"
datasets = "*"
jupyter = "*"
nglview = "*"
"smirnoff-plugins" = ">=0.0.4"
"openff-toolkit" = ">=0.17.0"
"openff-units" = "*"
"openff-interchange" = ">=0.4.11" # Required for numpy 2.4 compatibility
"openff-forcefields" = ">=2026.01.0"
tensorboardX = "*"
tensorboard = "*"
versioneer = "*"
"pydantic" = ">=2"
"pydantic-settings" = "*"
"pydantic-units"= "*"
loguru = "*"
h5py = "*"
seaborn = "*"
rdkit = ">=2024.03.6"
ambertools = "*"

# Install packages via pip: GitHub smee + mace-torch
[tool.pixi.feature.common.pypi-dependencies]
descent = { git = "https://github.com/fjclark/descent.git", branch = "feature-regularization" }
smee = { git = "https://github.com/thomasjamespope/smee.git" }
mace-torch = "*"
presto ={ path = ".", editable = true }

# -----------------------------
# GPU vs CPU toggle
# -----------------------------
[tool.pixi.feature.gpu.system-requirements]
cuda = "12"

[tool.pixi.feature.gpu.dependencies]
cuda-version = ">=12"
pytorch-gpu = "*"
# cuequivariance="*"
# cuequivariance-torch="*"

# [tool.pixi.feature.gpu.pypi-dependencies]
# cuequivariance-ops-torch-cu12="*"

[tool.pixi.feature.cpu.dependencies]
pytorch = "*"

# Temporary descent and smee deps -  this allows installing
# Tom's custom smee fork from GitHub and will be removed once
# the changes are merged upstream and available from conda-forge.
[tool.pixi.feature.smee_descent.dependencies]
scipy = "*"
pyarrow = "*"
datasets = "*"
openff-units = "*"
openff-toolkit-base = ">=0.9.2"
openff-interchange-base = ">=0.3.17"
pytorch = "*"
__unix = "*"

# -----------------------------
# Different ML potential options
# -----------------------------
# Need for different features as nnpoops pins torch to older versions. This causes resolution conflicts with openmm-torch (which pins a specific build).
[tool.pixi.feature.aceff.dependencies]
openmm = ">=8.4"
openmm-ml = ">=1.5"
openmm-torch = ">=1.5.1"
torchmd-net = "*"

[tool.pixi.feature.mace.dependencies] # Also applies to Egret-1
openmm = ">=8.2"
openmm-ml = ">=1.2"
nnpops = "*"

# -----------------------------
# Dev/test tools
# -----------------------------
[tool.pixi.feature.dev.dependencies]
pre-commit = "*"
ruff = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
codecov = "*"
mypy = "*"
hypothesis = "*"
ipdb = "*"

# -----------------------------
# Documentation
# -----------------------------
[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
"mkdocs-material" = "*"
"mkdocs-gen-files" = "*"
"mkdocs-literate-nav" = "*"
"mkdocs-jupyter" = "*"
mkdocstrings = "*"
"mkdocstrings-python" = "*"
black = "*"
mike = "*"
"griffe-pydantic" = "*"

[tool.pixi.feature.docs.pypi-dependencies]
mkdocs-bibtex = "*"

# -----------------------------
# Typing stubs
# -----------------------------
[tool.pixi.feature.typing.pypi-dependencies]
"types-colorama" = "*"
"types-decorator" = "*"
"types-defusedxml" = "*"
"types-docutils" = "*"
"types-greenlet" = "*"
"types-jsonschema" = "*"
"types-networkx" = "*"
"types-openpyxl" = "*"
"types-pexpect" = "*"
"types-protobuf" = "*"
"types-Pygments" = "*"
"types-python-dateutil" = "*"
"types-pytz" = "*"
"types-PyYAML" = "*"
"types-requests" = "*"
"types-tabulate" = "*"
"types-tqdm" = "*"
"pandas-stubs" = "*"

# -----------------------------
# Tasks (run in proper environment/feature context)
# -----------------------------
[tool.pixi.tasks]
install-pre-commit = { cmd = "pre-commit install" }

# Linting requires dev
lint = { cmd = "ruff check presto" }
format = { cmd = "ruff format presto && ruff check --fix --select I presto" }

# Testing requires dev + common + GPU/CPU
test = { cmd = "pytest -v --cov=presto --cov-report=term --cov-report=xml --junitxml=unit.xml --color=yes presto/tests" }
"test-unit" = { cmd = "pytest -v --cov=presto --cov-report=term --cov-report=xml --junitxml=unit.xml --color=yes presto/tests/unit" }
"test-integration" = { cmd = "pytest -v --cov=presto --cov-report=term --cov-report=xml --junitxml=unit.xml --color=yes presto/tests/integration" }

type-check = { cmd = "mypy --follow-imports=silent --ignore-missing-imports --strict presto" }

# Docs tasks require docs feature
"docs-build" = { cmd = "mkdocs build" }
"docs-serve" = { cmd = "mkdocs serve" }
"docs-deploy" = { cmd = "mike deploy --push --update-aliases $VERSION" }
